--- a/飞机大战/飞机大战/飞机大战.csproj
+++ b/飞机大战/飞机大战/飞机大战.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="Program.cs" />
