--- a/飞机大战/飞机大战/飞机大战.csproj
+++ b/飞机大战/飞机大战/飞机大战.csproj
@@ -55,9 +55,11 @@
     </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="GameState.cs" />
+    <Compile Include="IMove.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shell.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
