添加boss和boss子弹

--- a/飞机大战/飞机大战/飞机大战.csproj
+++ b/飞机大战/飞机大战/飞机大战.csproj
@@ -128,5 +128,8 @@
   <ItemGroup>
     <None Include="Resources\tripleshell.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\littleboss2bullet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
