--- a/点餐管理系统_WinForm版/RMS/UI/UI.csproj
+++ b/点餐管理系统_WinForm版/RMS/UI/UI.csproj
@@ -99,6 +99,10 @@
       <Project>{DD3E4E81-FBBD-48ED-A209-4629D2142876}</Project>
       <Name>BLL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{D7084E3B-82B2-424D-9E7E-30AF2EAB44B4}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
