验证码工具类；点餐界面登录功能

--- a/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
+++ b/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
@@ -41,10 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderingBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{70DB3C52-C26D-41BC-B740-24CF4F21F0D1}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{5931839C-81B6-4E2D-AAEE-10E06A014950}</Project>
       <Name>DAL</Name>
