会员分页展示；新增会员；删除会员；搜索会员

--- a/点餐管理系统_WinForm版/RMS/UI/UI.csproj
+++ b/点餐管理系统_WinForm版/RMS/UI/UI.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemberAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MemberAdd.Designer.cs">
+      <DependentUpon>MemberAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="MemberManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     <Compile Include="UserManager.Designer.cs">
       <DependentUpon>UserManager.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MemberAdd.resx">
+      <DependentUpon>MemberAdd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MemberManager.resx">
       <DependentUpon>MemberManager.cs</DependentUpon>
     </EmbeddedResource>
