--- a/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
+++ b/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemberInfoBLL.cs" />
+    <Compile Include="MemberTypeBLL.cs" />
     <Compile Include="OrderingBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBLL.cs" />
