--- a/点餐管理系统_WinForm版/RMS/Model/Model.csproj
+++ b/点餐管理系统_WinForm版/RMS/Model/Model.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\QueryMemberDTO.cs" />
+    <Compile Include="MemberInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
