商品类别信息的增删改查

--- a/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
+++ b/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryInfoBLL.cs" />
     <Compile Include="MemberInfoBLL.cs" />
     <Compile Include="MemberTypeBLL.cs" />
     <Compile Include="OrderingBLL.cs" />
+    <Compile Include="ProductInfoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
