--- a/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
+++ b/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryInfoDAL.cs" />
     <Compile Include="MemberInfoDAL.cs" />
     <Compile Include="MemberTypeDAL.cs" />
+    <Compile Include="ProductInfoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteHelper.cs" />
     <Compile Include="UserDAL.cs" />
