显示包房类别项

--- a/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
+++ b/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MemberTypeDAL.cs" />
     <Compile Include="ProductInfoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomInfoDAL.cs" />
     <Compile Include="SQLiteHelper.cs" />
     <Compile Include="UserDAL.cs" />
   </ItemGroup>
