--- a/点餐管理系统_WinForm版/RMS/Model/Model.csproj
+++ b/点餐管理系统_WinForm版/RMS/Model/Model.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MemberInfo.cs" />
     <Compile Include="ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <ItemGroup />
