开单：添加开单桌面

--- a/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
+++ b/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryInfoBLL.cs" />
+    <Compile Include="DeskInfoBLL.cs" />
     <Compile Include="MemberInfoBLL.cs" />
     <Compile Include="MemberTypeBLL.cs" />
     <Compile Include="OrderingBLL.cs" />
