--- a/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
+++ b/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryInfoDAL.cs" />
+    <Compile Include="DeskInfoDAL.cs" />
     <Compile Include="MemberInfoDAL.cs" />
     <Compile Include="MemberTypeDAL.cs" />
     <Compile Include="ProductInfoDAL.cs" />
