提交开单信息

--- a/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
+++ b/点餐管理系统_WinForm版/RMS/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DeskInfoBLL.cs" />
     <Compile Include="MemberInfoBLL.cs" />
     <Compile Include="MemberTypeBLL.cs" />
+    <Compile Include="OrderInfoBLL.cs" />
     <Compile Include="OrderingBLL.cs" />
     <Compile Include="ProductInfoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
