--- a/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
+++ b/点餐管理系统_WinForm版/RMS/DAL/DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DeskInfoDAL.cs" />
     <Compile Include="MemberInfoDAL.cs" />
     <Compile Include="MemberTypeDAL.cs" />
+    <Compile Include="OrderInfoDAL.cs" />
     <Compile Include="ProductInfoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomInfoDAL.cs" />
