--- a/点餐管理系统_WinForm版/RMS/Model/Model.csproj
+++ b/点餐管理系统_WinForm版/RMS/Model/Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DTO\QueryMemberDTO.cs" />
     <Compile Include="MemberInfo.cs" />
     <Compile Include="OrderInfo.cs" />
+    <Compile Include="OrderProduct.cs" />
     <Compile Include="ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoomInfo.cs" />
