--- a/HospitalManagementSystem/BLL/BLL.csproj
+++ b/HospitalManagementSystem/BLL/BLL.csproj
@@ -39,7 +39,24 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ModuleBLL.cs" />
+        <Compile Include="PermissionBLL.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="UserBLL.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj">
+        <Project>{9142a9f2-5f71-43df-871c-e44ddce26a79}</Project>
+        <Name>Common</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\DAL\DAL.csproj">
+        <Project>{28cddc09-a668-4f6c-97a0-1a18a436f6b8}</Project>
+        <Name>DAL</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Model\Model.csproj">
+        <Project>{04fcbe5b-bdf1-423b-b887-116a68b453ca}</Project>
+        <Name>Model</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
