--- a/HospitalManagementSystem/Common/Common.csproj
+++ b/HospitalManagementSystem/Common/Common.csproj
@@ -5,11 +5,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{04FCBE5B-BDF1-423B-B887-116A68B453CA}</ProjectGuid>
+        <ProjectGuid>{9142A9F2-5F71-43DF-871C-E44DDCE26A79}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Model</RootNamespace>
-        <AssemblyName>Model</AssemblyName>
+        <RootNamespace>Common</RootNamespace>
+        <AssemblyName>Common</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -39,12 +39,23 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="DTO\UserPermissionsDTO.cs" />
-        <Compile Include="GlobalContext.cs" />
-        <Compile Include="Module.cs" />
-        <Compile Include="Permission.cs" />
+        <Compile Include="Attribute\PermissionMetaAttribute.cs" />
+        <Compile Include="Enum\Permissions\SystemManagement.cs" />
+        <Compile Include="Enum\Permissions\UserManagement.cs" />
+        <Compile Include="PermissionSyncService.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="User.cs" />
+        <Compile Include="Result.cs" />
+        <Compile Include="Utils\MD5Util.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\DAL\DAL.csproj">
+        <Project>{28cddc09-a668-4f6c-97a0-1a18a436f6b8}</Project>
+        <Name>DAL</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Model\Model.csproj">
+        <Project>{04fcbe5b-bdf1-423b-b887-116a68b453ca}</Project>
+        <Name>Model</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
