--- a/HospitalManagementSystem/DAL/DAL.csproj
+++ b/HospitalManagementSystem/DAL/DAL.csproj
@@ -40,8 +40,18 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ModuleDAL.cs" />
+        <Compile Include="ModulePermission.cs" />
+        <Compile Include="PermissionDAL.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="SQLHelper.cs" />
+        <Compile Include="UserDAL.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Model\Model.csproj">
+        <Project>{04fcbe5b-bdf1-423b-b887-116a68b453ca}</Project>
+        <Name>Model</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
