--- a/HospitalManagementSystem/UI/UI.csproj
+++ b/HospitalManagementSystem/UI/UI.csproj
@@ -52,10 +52,43 @@
         <Compile Include="Login.Designer.cs">
             <DependentUpon>Login.cs</DependentUpon>
         </Compile>
+        <Compile Include="MainPage.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="MainPage.Designer.cs">
+          <DependentUpon>MainPage.cs</DependentUpon>
+        </Compile>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="SystemManagement\ModuleAddOrUpdate.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="SystemManagement\ModuleAddOrUpdate.Designer.cs">
+          <DependentUpon>ModuleAddOrUpdate.cs</DependentUpon>
+        </Compile>
+        <Compile Include="SystemManagement\PermissionAddOrUpdate.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="SystemManagement\PermissionAddOrUpdate.Designer.cs">
+          <DependentUpon>PermissionAddOrUpdate.cs</DependentUpon>
+        </Compile>
+        <Compile Include="SystemManagement\PermissionManagementForm.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="SystemManagement\PermissionManagementForm.Designer.cs">
+          <DependentUpon>PermissionManagementForm.cs</DependentUpon>
+        </Compile>
+        <Compile Include="SystemManagement\SMIndex.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="SystemManagement\SMIndex.Designer.cs">
+          <DependentUpon>SMIndex.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="Login.resx">
           <DependentUpon>Login.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="MainPage.resx">
+          <DependentUpon>MainPage.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +99,18 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="SystemManagement\ModuleAddOrUpdate.resx">
+          <DependentUpon>ModuleAddOrUpdate.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="SystemManagement\PermissionAddOrUpdate.resx">
+          <DependentUpon>PermissionAddOrUpdate.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="SystemManagement\PermissionManagementForm.resx">
+          <DependentUpon>PermissionManagementForm.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="SystemManagement\SMIndex.resx">
+          <DependentUpon>SMIndex.cs</DependentUpon>
+        </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -80,9 +125,21 @@
         <None Include="App.config"/>
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\BLL\BLL.csproj">
+        <Project>{2677beb5-d4b9-4a40-833e-3819333ba25b}</Project>
+        <Name>BLL</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Common\Common.csproj">
+        <Project>{9142a9f2-5f71-43df-871c-e44ddce26a79}</Project>
+        <Name>Common</Name>
+      </ProjectReference>
       <ProjectReference Include="..\DAL\DAL.csproj">
         <Project>{28cddc09-a668-4f6c-97a0-1a18a436f6b8}</Project>
         <Name>DAL</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Model\Model.csproj">
+        <Project>{04fcbe5b-bdf1-423b-b887-116a68b453ca}</Project>
+        <Name>Model</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
