权限框架搭建完毕：实现权限枚举信息与数据库双向校验；用户权限注入；UI层事件方法校验用户与特性权限信息；权限管理界面动态权限信息展示；动态代理实现权限修改日志记录

--- a/HospitalManagementSystem/Common/Common.csproj
+++ b/HospitalManagementSystem/Common/Common.csproj
@@ -40,8 +40,20 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Attribute\PermissionMetaAttribute.cs" />
+        <Compile Include="Attribute\PermissionOperationLogAttribute.cs" />
+        <Compile Include="Attribute\PermissionRequiredAttribute.cs" />
+        <Compile Include="Constant\LogFlag\ActionTypeConstant.cs" />
+        <Compile Include="Constant\LogFlag\TargetTypeConstant.cs" />
+        <Compile Include="Enum\Permissions\DrugStorehouseManagement.cs" />
+        <Compile Include="Enum\Permissions\FinancialManagement.cs" />
+        <Compile Include="Enum\Permissions\HospitalizationManagement.cs" />
+        <Compile Include="Enum\Permissions\OutpatientFees.cs" />
+        <Compile Include="Enum\Permissions\OutpatientManagement.cs" />
+        <Compile Include="Enum\Permissions\OutpatientVisits.cs" />
+        <Compile Include="Enum\Permissions\PharmacyManagement.cs" />
         <Compile Include="Enum\Permissions\SystemManagement.cs" />
         <Compile Include="Enum\Permissions\UserManagement.cs" />
+        <Compile Include="PermissionLoggingProxy.cs" />
         <Compile Include="PermissionSyncService.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Result.cs" />
