--- a/HospitalManagementSystem/BLL/BLL.csproj
+++ b/HospitalManagementSystem/BLL/BLL.csproj
@@ -42,6 +42,7 @@
         <Compile Include="ModuleBLL.cs" />
         <Compile Include="PermissionBLL.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="RoleBLL.cs" />
         <Compile Include="UserBLL.cs" />
     </ItemGroup>
     <ItemGroup>
