--- a/HospitalManagementSystem/DAL/DAL.csproj
+++ b/HospitalManagementSystem/DAL/DAL.csproj
@@ -42,8 +42,10 @@
     <ItemGroup>
         <Compile Include="ModuleDAL.cs" />
         <Compile Include="ModulePermission.cs" />
+        <Compile Include="PermissionChangeLogDAL.cs" />
         <Compile Include="PermissionDAL.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="RoleDAL.cs" />
         <Compile Include="SQLHelper.cs" />
         <Compile Include="UserDAL.cs" />
     </ItemGroup>
