--- a/HospitalManagementSystem/Model/Model.csproj
+++ b/HospitalManagementSystem/Model/Model.csproj
@@ -39,11 +39,15 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="DTO\ModulePermissionsDTO.cs" />
         <Compile Include="DTO\UserPermissionsDTO.cs" />
         <Compile Include="GlobalContext.cs" />
         <Compile Include="Module.cs" />
         <Compile Include="Permission.cs" />
+        <Compile Include="PermissionChangeLog.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Role.cs" />
+        <Compile Include="RolePermission.cs" />
         <Compile Include="User.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
