--- a/HospitalManagementSystem/UI/UI.csproj
+++ b/HospitalManagementSystem/UI/UI.csproj
@@ -60,6 +60,7 @@
         </Compile>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="SecureForm.cs" />
         <Compile Include="SystemManagement\ModuleAddOrUpdate.cs">
           <SubType>Form</SubType>
         </Compile>
